# tcf-c-core

./: .gitignore
agent/machine/powerpc/tcf/: cpudefs-mdep.c  cpudefs-mdep.h
agent/system/GNU/Linux/tcf/: context-linux.c
agent/tcf/: config.h
agent/tcf/framework/: channel.h  channel_tcp.c  event_queue.c  funccall.c  mdep.h  timed_event_queue.c  timed_event_queue.h  waitpid.c
agent/tcf/services/: expressions.c  expressions.h  symbols_elf.c
examples/appvirtgw/: CMakeLists.txt  Makefile  Makefile.w32
examples/appvirtgw/tcf/: config.h
examples/appvirtgw/tcf/main/: main.c
examples/device/: Makefile
examples/device/tcf/: config.h
examples/device/tcf/main/: main.c
examples/tcf_ws_proxy/: Makefile
examples/tcf_ws_proxy/tcf/: config.h
examples/tcf_ws_proxy/tcf/main/: main.c
server/tcf/: config.h
server/tcf/main/: server.c
server/tcf/services/: context-proxy.c
wr_extensions/agent/machine/arm/tcf/: cpudefs-mdep.c
wr_extensions/agent/machine/powerpc/tcf/: cpudefs-mdep.c
wr_extensions/agent/tcf/framework/: channel_np.c  channel_np.h
wr_extensions/agent/tcf/services/: WR_DeviceManagement_proxy.c  WR_DeviceManagement_proxy.h  channel_ping.c  channel_ping.h  portfw_proxy.c  portfw_proxy.h  portfw_service.c  portfw_service.h
wr_extensions/nopoll-0.2.7.b164/: CMakeLists.txt  nopoll.cmake
wr_extensions/nopoll-0.2.7.b164/src/: nopoll.c  nopoll_config.h  nopoll_conn.c  nopoll_conn.h  nopoll_ctx.c  nopoll_decl.h  nopoll_listener.c  nopoll_log.c  nopoll_private.h
